calendar overflow issue fixed? pt.2

--- a/style.css
+++ b/style.css
@@ -110,7 +110,6 @@ figure {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
   height: 100%;
 }
 
